align solve button

--- a/src/main/resources/styles/style.scss
+++ b/src/main/resources/styles/style.scss
@@ -15,8 +15,9 @@ $thick-border: 5px solid black;
   width: 100%;
   margin-bottom: 10px;
 
-  .row > div {
-    float: left;
+  > * {
+    display: inline-block;
+    margin-right: 6px;
   }
 
   .form-group input {
